# creolynator

./: '  CMakeLists.txt  readme.md
.github/workflows/: clang-llvm.yml
include/: b_lexer.h  deserialization_engine.hpp  error.h  globals.h  i_lexer.h  lexer.h  migr.h  migr_semantic.h  migr_structural.h  migr_traversal.h  serialization_engine.h  serialization_engine.hpp  test.h  utils.h
src/: b_lexer.cpp  error.cpp  i_lexer.cpp  lexer.cpp  main.cpp  migr.cpp  migr_semantic.cpp  migr_structural.cpp  migr_traversal.cpp  serialization_engine.cpp  test.cpp  utils.cpp
tests/full_tests/: 1.creole  2.creole  3.creole  4.creole
tests/unit_tests/: blankline.creole  bold.creole  heading.creole  italics.creole  link.creole  oli.creole  paragraph.creole  uli.creole  verbatim.creole
